# hml_lab3

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: bench.sh  bench_gemm.py  profile_gemm.py  profile_ncu.sh  run_correctness.sh  run_mlp_demo.py  run_vision_models.sh  sweep_num_stages.sh
src/gemm_lab/: __init__.py  gemm_fused.py  linear.py  ops.py
src/gemm_lab/kernels/: __init__.py  gemm_autotuned.py  gemm_fused.py  gemm_naive.py  gemm_tiled.py
src/gemm_lab/utils/: __init__.py  bench.py  correctness.py
src/triton_gemm_lab/: __init__.py  benchmark.py  kernels.py  model_integration.py  mylinear.py  sweep.py  validate.py  vision_integration.py
tests/: test_gemm_correctness.py  test_imports.py  test_linear_integration.py
